--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@ui5/webcomponents": "2.18.1",
     "@ui5/webcomponents-base": "2.18.1",
     "@ui5/webcomponents-fiori": "2.18.1",
-    "@ui5/webcomponents-icons": "2.18.1",
+    "@ui5/webcomponents-icons": "^2.18.1",
     "@ui5/webcomponents-react": "2.18.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -23,8 +23,8 @@
   "devDependencies": {
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
-    "@vitejs/plugin-react": "5.1.2",
     "@ui5/webcomponents-cypress-commands": "2.18.1",
+    "@vitejs/plugin-react": "5.1.2",
     "cypress": "15.9.0",
     "eslint": "9.39.2",
     "eslint-plugin-react-hooks": "6.1.1",
