--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: pages
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
@@ -25,7 +27,6 @@ jobs:
     - name: Build and publish
       run: |
         npm install
-        git checkout pages
         npm run build
         git add dist
         git commit -m 'Pages update'
