--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -34,5 +34,6 @@ jobs:
       run: |
         npm install
         npm run build
+        git add dist
 
     - uses: stefanzweifel/git-auto-commit-action@v7
