Integrate git auto-commit and push in workflow
Add git commands to commit and push changes after build

--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -35,5 +35,6 @@ jobs:
         npm install
         npm run build
         git add dist
-
-    - uses: stefanzweifel/git-auto-commit-action@v7
+        git status
+        git commit -m 'Pages update'
+        git push
