--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -34,6 +34,8 @@ jobs:
       run: |
         npm install
         npm run build
+        git config --global user.email "david.mobbs@gmail.com"
+        git config --global user.name "David Mobbs"
         git add dist
         git status
         git commit -m 'Pages update'
