--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -35,7 +35,7 @@ jobs:
         npm install
         git config --global user.name "${GITHUB_ACTOR}"
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        git reset --hard origin/main
+        git reset --hard main
         npm run build
         mv dist docs
         git add docs
