Enhance build workflow with branch and status checks
Added commands to list branches and check status before resetting.

--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -35,6 +35,8 @@ jobs:
         npm install
         git config --global user.name "${GITHUB_ACTOR}"
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git branch -a
+        git status
         git reset --hard main
         npm run build
         mv dist docs
