Fetch latest main branch in builder workflow

--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -35,6 +35,7 @@ jobs:
         npm install
         git config --global user.name "${GITHUB_ACTOR}"
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git fetch origin main --depth 1
         git branch -a
         git status
         git reset --hard main
