--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -38,7 +38,7 @@ jobs:
         git fetch origin main --depth 1
         git branch -a
         git status
-        git reset --hard main
+        git reset --hard origin/main
         npm run build
         mv dist docs
         git add docs
