Update GitHub Actions to force push docs
Force push updated documentation after build.

--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -36,12 +36,9 @@ jobs:
         git config --global user.name "${GITHUB_ACTOR}"
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git fetch origin main --depth 1
-        git branch -a
-        git status
         git reset --hard origin/main
         npm run build
         mv dist docs
         git add docs
-        git status
         git commit -m 'Pages update'
-        git push
+        git push --force
