--- a/.github/workflows/updateData.yml
+++ b/.github/workflows/updateData.yml
@@ -20,12 +20,12 @@ jobs:
       - name: Télécharger le fichier si le cache est manquant
         run: |
           FILE_URL="https://lorcanajson.org/files/current/fr/allCards.json"
-          DEST="src/allCards.json"
+          DEST="public/allCards.json"
           curl -fSL "$FILE_URL" -o "$DEST"
 
       - name: Vérifier le fichier
         run: |
-          if [[ ! -s src/allCards.json ]]; then
+          if [[ ! -s public/allCards.json ]]; then
             echo "❌ Fichier vide ou manquant"
             exit 1
           fi
@@ -34,6 +34,6 @@ jobs:
         run: |
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git add src/allCards.json
+          git add public/allCards.json
           git commit -m "Update allCards.json"
           git push
